--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   },
   "dependencies": {
     "next": "12.1.2",
-    "react": "^17.0.2",
-    "react-dom": "18.0.0",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "eslint": "8.12.0",
