--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.2",
+    "mongoose": "^6.2.9",
+    "next": "^12.1.2",
     "react": "^18.0.0",
     "react-dom": "18.0.0",
     "react-redux": "^7.2.8",
