--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "iron-session": "^6.1.2",
     "mongoose": "^6.2.9",
     "next": "^12.1.2",
     "react": "^18.0.0",
     "react-dom": "18.0.0",
     "react-redux": "^7.2.8",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "8.12.0",
